flux/apps/monitoring/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - grafana.apps.cluster1.internal.heidi.codes
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
